# Great-project-1-course

./: Button.cpp  Button.h  CMakeLists.txt  GameWindow.ui  Lastone.pro  Macaft.pro  README.md  TryToMake.pro  arithmetic_problem.cpp  arithmetic_problem.h  arithmeticwindow.cpp  arithmeticwindow.h  arithmeticwindow.ui  controller.cpp  game.cpp  game.h  gamewindow.cpp  global_struct_of_game.h  json.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minigame.cpp  minigame.h  minigame.ui  resource.qrc  resourses.qrc  resultwindow.cpp  resultwindow.h  sapermain.cpp  sapermain.h  saperwindow.cpp  sapper.cpp  sapper.h  sapper.ui  sapwindow.cpp  sapwindow.h  second_main.cpp  second_main.h  (+10 more)
PROBLEM_FOR_MINI_GAMES/: task_easy.json  task_hard.json  task_normal.json
TESTS/: First_myth.txt  first_myth_references.txt  first_myth_resources.txt  myth_0.json  myth_1.json  myth_2.json  plot_selection.json  polt_selection.json
diagram_uml/: myth_0.txt  myth_1.txt  myth_2.txt
include/: Button.h  arithmetic_problem.h  arithmeticwindow.h  controller.h  game.h  game_fwd.h  gamewindow.h  mainwindow.h  plot.h  resultwindow.h  saperwindow.h  sapper.h  second_main.h  settingswindow.h  story.h  uml.h  view.h  windowwithgame.h
saper/: Button.cpp  Button.h  Global.cpp  Global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  saper.pro
src/: Button.cpp  GameWindow.ui  Global.cpp  Macaft.pro  arithmetic_problem.cpp  arithmeticwindow.cpp  controller.cpp  game.cpp  gamewindow.cpp  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  minigame.cpp  minigame.ui  plot.cpp  resultwindow.cpp  resultwindow.ui  sapermain.cpp  saperwindow.cpp  saperwindow.ui  sapper.cpp  second_main.cpp  settingswindow.cpp  story.cpp  uml.cpp  untitled1.pro  view.cpp  windowwithgame.cpp  windowwithgame.ui
